Fixed pricing div centering

--- a/Dauber/Views/Home/Index.cshtml
+++ b/Dauber/Views/Home/Index.cshtml
@@ -28,15 +28,15 @@
 <hr class="featurette-divider" id="pricingDivider">
 
 <!-- Second Featurette -->
-<div class="featurette" id="pricing" style="border:1px solid black;">
-    <div class="container" style="border:1px solid black;">
-        <div class="row" style="border:1px solid black;">
+<div class="featurette" id="pricing">
+    <div class="container">
+        <div class="row text-center">
             <h2 class="featurette-heading">
                 Pricing <span class="text-muted">Plans</span>
             </h2>
         </div>
-        <div class="row" style="border:1px solid black;">
-            <div class="col-sm-3 col-md-3">
+        <div class="row">
+            <div class="col-md-4">
                 <div class="well">
                     <h2 class="text-muted">Free</h2>
                     <ul>
@@ -51,7 +51,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-sm-3 col-md-3">
+            <div class="col-md-4">
                 <div class="well">
                     <h2 class="text-success">Pro</h2>
                     <ul>
@@ -66,7 +66,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-sm-3 col-md-3">
+            <div class="col-md-4">
                 <div class="well">
                     <h2 class="text-warning">Elite</h2>
                     <ul>
@@ -82,12 +82,12 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="border:1px solid black;">
+        <div class="row text-center">
             <h3>
                 Have more than 50 clients? <a href="mailto:chuck@chuckgrossfitness.com">Let's talk!</a>
             </h3>
         </div>
-        <div class="row" style="border:1px solid black;">
+        <div class="row text-center">
             <p><a href="#">[top]</a></p>
         </div>
     </div>
