--- a/Dauber/Views/Home/Index.cshtml
+++ b/Dauber/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         Why <span class="text-muted">Dauber?</span>
 </h3>
     <p class="lead">Dauber automates gathering data from MyFitnessPal and Fitocracy.</p>
-    <p>Dauber allows you to easily import your client's MyFitnessPal nutrition information, as well as number of times a client tracked a workout in Fitocracy, DIRECTLY and AUTOMATICALLY into Google Sheets.</p>
+    <p>Dauber allows you to easily import your clients' MyFitnessPal nutrition information, as well as number of times each client tracked a workout in Fitocracy, DIRECTLY and AUTOMATICALLY into Google Sheets.</p>
     <p>Save yourself and your clients both the time and hassle of entering this manually, and <a href="" onclick=" location.href='@Url.Action("UpdatePlan", "MyAccount")' ">login now</a> to get started with a FREE account! (up to 5 clients)</p>
     <p><a href="#">[top]</a></p>
 </div>
