Added example gif to index

--- a/Dauber/Views/Home/Index.cshtml
+++ b/Dauber/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 <hr class="featurette-divider" id="aboutDivider">
 <!-- First Featurette -->
 <div class="featurette" id="about">
-    <img class="featurette-image img-responsive pull-right" src="http://placehold.it/500x500">
+    <img class="featurette-image img-responsive pull-right" src="~\Images/dauberExampleBoth.gif">
     <h3 class="featurette-heading">
         Why <span class="text-muted">Dauber?</span>
 </h3>
