--- a/Dauber/Views/MyAccount/Index.cshtml
+++ b/Dauber/Views/MyAccount/Index.cshtml
@@ -39,6 +39,26 @@
         <dd>
             @Html.DisplayFor(model => model.MaxClients)
         </dd>
+        @if (Model.ReferrerId != null)
+        {
+            <dt>
+                &nbsp;
+            </dt>
+            <dd>
+                &nbsp;
+            </dd>
+
+            <dt>
+                Your Invite Code Link
+            </dt>
+
+            <dd>
+                @{
+            var url = "https://dauber.apphb.com/Account/Login/?inviteCode=" + Model.ReferrerId;
+                }
+                <input type="text" name="referrerUrl" id="referrerUrl" disabled value="@url" style="width: 750px">
+            </dd>
+        }
         @if (!Model.IsPartner && !Model.IsAdmin)
         {
             <dt>
