--- a/Dauber/Views/Shared/_Layout.cshtml
+++ b/Dauber/Views/Shared/_Layout.cshtml
@@ -17,7 +17,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Dauber", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class="navbar-brand" href="#">
+                    <img src="~/Images/dauberLogo2.png" alt="Wasp with Muscles" class="img-responsive">
+                </a>
+                @*@Html.ActionLink("Dauber", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
                 @*<ul class="nav navbar-nav">
